--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,10 @@ name = "news-letter"
 path = "src/main.rs"
 
 [lib]
+name = "lib"
 path = "src/lib.rs"
 
 [dependencies]
 actix-web = "4"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
+reqwest = "0.12.9"
